--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-	"name": "baraja-core/template",
+	"name": "baraja-core/shop-payment",
 	"description": "This is a template package.",
-	"homepage": "https://github.com/baraja-core/template",
+	"homepage": "https://github.com/baraja-core/shop-payment",
 	"authors": [
 		{
 			"name": "Jan Barášek",
@@ -9,7 +9,8 @@
 		}
 	],
 	"require": {
-		"php": "^8.0"
+		"php": "^8.0",
+		"baraja-core/doctrine": "^3.0"
 	},
 	"require-dev": {
 		"phpstan/phpstan": "^0.12.74",
