Composer.json: Basic info.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "baraja-core/shop-payment",
-	"description": "This is a template package.",
+	"description": "Shop payment description package.",
 	"homepage": "https://github.com/baraja-core/shop-payment",
 	"authors": [
 		{
