--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
 	"require": {
 		"php": "^8.0",
 		"baraja-core/ecommerce-standard": "^0.0",
-		"baraja-core/doctrine": "^3.0"
+		"baraja-core/shop-price": "^1.1",
+		"doctrine/orm": "^2.9"
 	},
 	"require-dev": {
+		"baraja-core/doctrine": "^3.0",
 		"phpstan/phpstan": "^1.0",
 		"phpstan/extension-installer": "^1.1",
 		"phpstan/phpstan-nette": "^1.0",
